--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     
     repositories {
@@ -9,6 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+
+        implementation 'com.google.android.gms:play-services-maps:18.0.2'
+        implementation 'com.google.android.gms:play-services-location:19.0.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
