--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 //apply plugin: 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 
 android {
+    viewBinding {
+        enabled = true
+    }
     compileSdkVersion 33
     buildToolsVersion "29.0.3"
 
@@ -28,7 +31,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation "androidx.viewpager2:viewpager2:1.0.0"  //viewpager
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -39,6 +42,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.android.support:design:33.0.0' // bottomNavigationView
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02' //tablayout
     implementation "androidx.activity:activity:1.2.0-alpha04"
     implementation "androidx.fragment:fragment:1.3.0-alpha04"
 }
