--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-feature android:name="android.hardware.camera" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -54,6 +53,7 @@
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".RecipeActivity"></activity>
         <activity android:name=".BookmarkActivity"></activity>
+        <activity android:name=".AddressActivity"></activity>
         <meta-data
             android:name="com.google.android.geo.API Key"
             android:value="AIzaSyAuDsy4VBw2wV2waycQ0Ek-GTeOoJg2wSQ"
