--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".BookmarkActivity"></activity>
         <activity android:name=".Edit_Profile_Activity"></activity>
         <activity android:name=".AddressActivity"></activity>
+        <activity android:name=".RecipeInfoActivity"></activity>
         <meta-data
             android:name="com.google.android.geo.API Key"
             android:value="AIzaSyAuDsy4VBw2wV2waycQ0Ek-GTeOoJg2wSQ"
