--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.naseyun.computer.myrefrigerator">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -17,18 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/actions" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAuDsy4VBw2wV2waycQ0Ek-GTeOoJg2wSQ" />
@@ -37,29 +29,6 @@
             android:name=".MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -70,22 +39,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".MybasketActivity"></activity>
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".ItemActivity"></activity>
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".RecipeActivity"></activity>
-        <activity android:name=".BookmarkActivity"></activity>
-        <activity android:name=".Edit_Profile_Activity"></activity>
-        <activity android:name=".AddressActivity"></activity>
-        <activity android:name=".RecipeInfoActivity"></activity>
-        <meta-data
-            android:name="com.google.android.geo.API Key"
-            android:value="AIzaSyAuDsy4VBw2wV2waycQ0Ek-GTeOoJg2wSQ"
-            />
-
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".MybasketActivity" />
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".ItemActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".RecipeActivity" />
+        <activity android:name=".BookmarkActivity" />
+        <activity android:name=".Edit_Profile_Activity" />
+        <activity android:name=".AddressActivity" />
+        <activity android:name=".RecipeInfoActivity" />
     </application>
 
 </manifest>
