--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha02' //tablayout
     implementation "androidx.activity:activity:1.2.0-alpha04"
     implementation "androidx.fragment:fragment:1.3.0-alpha04"
-
+    implementation 'commons-io:commons-io:2.4'
 }
 
